Added an image view for the resolve attachment, that was previously the swapchain image. Comparator is now rendering to the swapchain image

--- a/frame_comp_app/Cargo.toml
+++ b/frame_comp_app/Cargo.toml
@@ -14,3 +14,4 @@ tobj = { version = "3", features = ["log"] }
 vulkanalia = { version = "=0.29.0", features = ["libloading", "provisional", "window"]}
 winit = "0.29"
 frame_comp = { path = "../frame_comp" }
+lazy_static = "1.4"
