--- a/frame_comp_app/Cargo.toml
+++ b/frame_comp_app/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1"
-log = "0.4"
-cgmath = "0.18"
-png = "0.17"
-pretty_env_logger = "0.5"
-thiserror = "1"
-tobj = { version = "3", features = ["log"] }
-vulkanalia = { version = "=0.29.0", features = ["libloading", "provisional", "window"]}
-winit = "0.29"
+anyhow = "1.0.100"
+log = "0.4.28"
+cgmath = "0.18.0"
+png = "0.18.0"
+pretty_env_logger = "0.5.0"
+thiserror = "2.0.17"
+tobj = { version = "4.0.3", features = ["log"] }
+vulkanalia = { version = "0.31.0", features = ["libloading", "provisional", "window"]}
+winit = "0.30.12"
 frame_comp = { path = "../frame_comp" }
-lazy_static = "1.4"
+lazy_static = "1.5.0"
